# AIDataHub

./: .gitignore  AGENTS.md  CONVERSION_RULES_INDEX.md  EXTENSION_STATUS_2026-05-09.md  META_FORMAT_AUDIT.md  REMAINING_JOBS.md  REMAINING_JOBS_GAP_2026-05-09.md  ai_data_strategy.md  ai_data_strategy_deck.html  ai_systems_overview.html  aidatahub_program_deck.html  aidatahub_status_summary.html  autostart-install.sh  boot.sh  bootstrap.sh  cad_cae_metadata_rules.md  combined_status_summary.html  diag.sh  excel_to_json_conversion_rules.md  fetch-model.sh  html_to_json_conversion_rules.md  iga_guide.docx  install.sh  json_schema_rules.md  md_to_json_conversion_rules.md  mxwhitepaper_status_summary.html  pdf_to_json_conversion_rules.md  ppt_to_json_conversion_rules.md  publish-ext.sh  quickstart.sh  repair.sh  setup.sh  smoke.sh  start-behind-portal.sh  status.sh  update.sh  word_to_json_conversion_rules.md
distribution/api_server/: .gitignore  README.md  alembic.ini  docker-compose.yml  ingest.bat  pyproject.toml  requirements.txt  run.bat  setup.bat
distribution/api_server/docs/: AGENT_API_GUIDE_LARGE.md  AGENT_API_GUIDE_MEDIUM.md  AGENT_API_GUIDE_SMALL.md  AGENT_API_GUIDE_TINY.md  AGENT_ONBOARDING.md  api_reference.md  cline_sr_recommendations.md  converter_limits.md  data_model.md  extension_integration_plan.md  go_live_checklist.md  governance.md  mcp_integration_guide.md  setup_guide.md  user_guide_for_engineers.md  windows_native_setup.md
distribution/api_server/scripts/: mcp_smoke.py  smoke_test.py  start_dev.ps1  start_dev.sh  verify_install.py
(+604 files in other folders)
