[project]
name = "ai-data-api"
version = "0.1.0"
description = "사업부 문서 AI 데이터 API 서버 (Word → JSON → PostgreSQL → Cline SR)"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["api"]
